<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_image" />

        <ImageView
            android:id="@+id/ImgUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="?attr/actionBarDivider"
            android:contentDescription="@string/uploaded_image_from_camera"/>

        <EditText
            android:id="@+id/sub_Disc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName"
            android:singleLine="false" />

        <EditText
            android:id="@+id/sub_farmName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/farm_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/sub_farmAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/farm_address"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/sub_dmgEst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/damage_estimation"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/sub_hypothesis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hypothesis"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/sub_addInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/additional_information"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnSubmitIssue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_issue" />

        <Button
            android:id="@+id/btnCancelTicket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_ticket" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>